puck_liveview/src/dom/element/diff/snapshots/puck_liveview__dom__element__diff__test_diffing__test_add_child_change.snap
---
source: puck_liveview/src/dom/element/diff/test_diffing.rs
expression: c

---
Changeset {
    ops: [
        Op {
            id: "2",
            instruction: InsertAfter {
                after_id: "2",
            },
        },
    ],
}
