puck_liveview/src/dom/element/diff/snapshots/puck_liveview__dom__element__diff__test_diffing__test_name_change.snap
---
source: puck_liveview/src/dom/element/diff/test_diffing.rs
expression: cs

---
Changeset {
    ops: [
        Op {
            id: "0",
            instruction: SetTagName {
                name: "p",
            },
        },
    ],
}
