puck_liveview/src/dom/element/diff/snapshots/puck_liveview__dom__element__diff__test_diffing__test_single_element_text_change.snap
---
source: puck_liveview/src/dom/element/diff/test_diffing.rs
expression: c

---
Changeset {
    ops: [
        Op {
            id: "0-",
            instruction: SetText {
                value: "the mat sat on the cat",
            },
        },
    ],
}
